se agregan variables de entorno

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,11 @@ services:
       N8N_HIRING_BANNER_ENABLED: ${N8N_HIRING_BANNER_ENABLED}
       N8N_PERSONALIZATION_ENABLED: ${N8N_PERSONALIZATION_ENABLED}
       N8N_SECURE_COOKIE: ${N8N_SECURE_COOKIE}
+  
+      SYSCOM_BASE_URL: ${SYSCOM_BASE_URL}
+      SYSCOM_TOKEN: ${SYSCOM_TOKEN}
+      SYSCOM_SUCURSAL_MN: ${SYSCOM_SUCURSAL_MN}
+      SYSCOM_CATEGORIAS: ${SYSCOM_CATEGORIAS}
 
       TZ: ${TZ}
     ports:
